# small-world-rs

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: rust.yml
benches/: search_benchmark.rs
examples/text-embeddings/: .gitignore  Cargo.toml  dataset.txt  readme.md
examples/text-embeddings/src/: main.rs
src/: lib.rs  main.rs
src/distance_metric/: mod.rs
src/metrics/: mod.rs
src/primitives/: mod.rs  vector.rs
src/world/: mod.rs  node.rs  world.rs
