[package]
name = "small-world-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "small_world_rs"
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.94"
assert_approx_eq = "1.1.0"
bincode = "1.3.3"
blake3 = "1.5.5"
fastrand = "2.2.0"
half = { version = "2.4.1", features = ["serde"] }
ordered-float = "4.5.0"
serde = { version = "1.0", features = ["derive"] }
simsimd = "6.2.1"
