[package]
name = "small-world-rs"
version = "1.1.1"
edition = "2021"
description = "The easiest HNSW vector index you'll ever use"
repository = "https://github.com/httpjamesm/small-world-rs"
readme = "readme.md"
keywords = ["hnsw", "vector", "search", "index", "graph"]
categories = ["data-structures"]
license = "MIT"

exclude = ["benches", "examples", ".github"]

[lib]
name = "small_world_rs"
crate-type = ["lib"]

[[bench]]
name = "search_benchmark"
harness = false

[dependencies]
anyhow = "1.0.94"
assert_approx_eq = "1.1.0"
bincode = "1.3.3"
blake3 = "1.5.5"
fastrand = "2.2.0"
half = { version = "2.4.1", features = ["serde"] }
hashbrown = { version = "0.15.2", features = ["serde"] }
ordered-float = "4.5.0"
serde = { version = "1.0", features = ["derive"] }
simsimd = "6.2.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
